--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,6 +24,7 @@
                 android:text="@string/hardware_button_detection" />
             <CheckBox
                 android:id="@+id/hardwareCB"
+                android:background="@drawable/search_focus"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
@@ -51,6 +51,7 @@
             android:id="@+id/openApplicationCB"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@drawable/search_focus"
             android:layout_gravity="center_vertical"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
@@ -75,6 +76,7 @@
             android:id="@+id/broadcastCB"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@drawable/search_focus"
             android:layout_gravity="center_vertical"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
@@ -99,11 +101,12 @@
             android:id="@+id/overlayCB"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@drawable/search_focus"
             android:layout_gravity="center_vertical"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="@dimen/settings_element_height"
         android:orientation="vertical"
@@ -119,12 +122,16 @@
             android:textSize="@dimen/settings_font_size"
             android:gravity="center_vertical"
             android:text="@string/disable_while_menu_is_held_hardware_buttons_only" />
+
         <CheckBox
             android:id="@+id/menuButtonOverrideCB"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
             android:layout_gravity="center_vertical"
-            android:layout_alignParentRight="true" />
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/search_focus" />
     </RelativeLayout>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -147,8 +154,36 @@
             android:id="@+id/taskSwitchCB"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@drawable/search_focus"
             android:layout_gravity="center_vertical"
             android:layout_alignParentRight="true" />
+    </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/sleepCheckCBView"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/settings_element_height"
+        android:orientation="vertical"
+        android:paddingLeft="14dip"
+        android:paddingTop="8dip"
+        android:paddingRight="14dip"
+        android:paddingBottom="8dip">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:gravity="center_vertical"
+            android:text="@string/enable_sleep_check"
+            android:textSize="@dimen/settings_font_size" />
+
+        <CheckBox
+            android:id="@+id/sleepCheckCB"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/search_focus"
+            android:layout_gravity="center_vertical" />
     </RelativeLayout>
 
 
@@ -163,6 +198,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_marginTop="16dip"
+            android:background="@drawable/search_focus"
             android:layout_marginBottom="16dip"
             android:layout_marginLeft="14dip"
             android:layout_marginRight="14dip"
@@ -171,6 +207,7 @@
             android:id="@+id/saveButton"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:background="@drawable/search_focus"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_marginTop="16dip"
