4th Commit : About and Help pages added and some minor tweaks.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,6 @@
         android:id="@+id/lvApps"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:choiceMode="singleChoice"
-        />
+        android:choiceMode="singleChoice" />
+
 </RelativeLayout>
