--- a/app/src/main/res/layout/layout_appinfo.xml
+++ b/app/src/main/res/layout/layout_appinfo.xml
@@ -14,23 +14,20 @@
       android:layout_width="48dp"
       android:layout_height="48dp"
       android:layout_marginEnd="5dip"
-      android:scaleType="fitXY"
-  />
+      android:scaleType="fitXY" />
   
   <LinearLayout
       android:orientation="vertical"
       android:layout_width="0dip"
-      android:layout_height="fill_parent" 
-      android:layout_weight="1"     
-  >
+      android:layout_height="fill_parent"
+      android:layout_weight="1">
   
       <TextView
           android:id="@+id/tvName"
           android:layout_width="fill_parent"
           android:layout_height="0dip"
           android:layout_weight="1"
-          android:gravity="center_vertical"          
-      />
+          android:gravity="center_vertical" />
       
       <TextView
           android:id="@+id/tvPack"
@@ -38,8 +35,7 @@
           android:layout_height="0dip"
           android:layout_weight="1"
           android:singleLine="true"
-          android:ellipsize="marquee"          
-      />
+          android:ellipsize="marquee" />
   
   </LinearLayout>
   
