--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="@string/hide_system_apps"
         android:checkable="true"
@@ -8,10 +7,13 @@
     <item android:title="@string/launchers_only"
         android:id="@+id/launcher"
         android:checkable="true" />
-    <item android:title="@string/help"
-        android:id="@+id/help" />
-    <item android:title="@string/donate"
-        android:id="@+id/donate" />
+    <item
+        android:id="@+id/help"
+        android:title="@string/help" />
     <item android:title="@string/settings"
         android:id="@+id/settings" />
+    <item
+        android:id="@+id/about"
+        android:title="@string/about" />
+
 </menu>
